# serializer version: 1
# name: test_upload_cli
  dict({
    'delivery_id': '20120114T120001-product1-2824',
    'files_uploaded': list([
      'tests/resources/file1.txt',
      'tests/resources/file2.txt',
    ]),
  })
# ---
# name: test_upload_cli_save_delivery_json
  dict({
    'creation_time': '2012-01-14T12:00:01+00:00',
    'dataset_id': 'dataset1',
    'manifest_id': '20120114T120001-product1-2824',
    'operations': list([
      dict({
        'files': list([
          dict({
            'checksum': 'c08af741236b563ed7ac6e240623a6f5-1',
            'file_size': 0,
            'key_suffix': 'tests/resources/file1.txt',
            'upload_time': 0.0,
          }),
          dict({
            'checksum': '727a3ead5c2a5492759091a67cb31068-1',
            'file_size': 0,
            'key_suffix': 'tests/resources/file2.txt',
            'upload_time': 0.0,
          }),
        ]),
        'operation': 'upload',
      }),
    ]),
    'product_id': 'product1',
    'pushing_entity_id': 'GLO-MERCATOR-TOULOUSE-FR',
  })
# ---
# name: test_upload_python_interface
  dict({
    'delivery_id': '20120114T120001-product1-2824',
    'files_failed': list([
    ]),
    'files_invalid': list([
    ]),
    'files_uploaded': list([
      PosixPath('tests/resources/file1.txt'),
      PosixPath('tests/resources/file2.txt'),
    ]),
  })
# ---
# name: test_upload_python_interface.1
  '''
  {
    "manifest_id": "20120114T120001-product1-2824",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "status": "todo",
        "status_timestamp": null,
        "error": null,
        "files": [
          {
            "key_suffix": "tests/resources/file1.txt",
            "file_size": 0,
            "checksum": "c08af741236b563ed7ac6e240623a6f5-1",
            "status": "todo",
            "status_timestamp": null,
            "error": null,
            "upload_time": 0.0
          },
          {
            "key_suffix": "tests/resources/file2.txt",
            "file_size": 0,
            "checksum": "727a3ead5c2a5492759091a67cb31068-1",
            "status": "todo",
            "status_timestamp": null,
            "error": null,
            "upload_time": 0.0
          }
        ]
      }
    ],
    "creation_time": "2012-01-14T12:00:01+00:00",
    "status": "todo",
    "status_timestamp": null,
    "error": null
  }
  '''
# ---
